# cosmostat

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  pyproject.toml  setup.py  setup_old.py
src/: CMakeLists.txt  README.md
src/cxx/: CMakeLists.txt
src/cxx/cmake/: BuildSparse2D.cmake
src/cxx/main1d/: im1d_convert.cc  im1d_der_loggamma.cc  im1d_info.cc  im1d_period.cc  im1d_stf.cc  im1d_tend.cc  im1d_tfreq.cc  mr1d_deconv.cc  mr1d_detect.cc  mr1d_filter.cc  mr1d_recons.cc  mr1d_trans.cc
src/cxx/main2d/: cb_mca.cc  cur_contrast.cc  cur_deconv.cc  cur_filter.cc  cur_stat.cc  cur_trans.cc  mr_deconv.cc  mr_filter.cc  mr_transform.cc  mr_ulc_filter.cc  rid_stat.cc  rid_trans.cc
src/cxx/main3d/: mr2d1d_stat.cc  mr2d1d_trans.cc  mr3d_filter.cc  mr3d_recons.cc  mr3d_stat.cc  mr3d_trans.cc
src/cxx/modules/: BuildCFITSIO.cmake  BuildFFTW3.cmake  BuildHEALPix.cmake  BuildNFFT.cmake  BuildSparse2D.cmake  fftw.cmd  functions.cmake  nfft.cmd  nfft_fftw.cmd
src/cxx/msvst/: msvst_2d1d.cc  msvst_iwt2d.cc  msvst_uwt2d.cc
src/cxx/python_binding/: alm.hpp  mrs.hpp  numpydata.hpp  pymrs.cpp
src/doc/doc_isap/: HDA.pages  JLSBibTex.bib  abbrevjournaux.sty  arrow.600pk  arrow.657pk  arrow.720pk  astron.bst  astron.sty  biblio.tex  ch_gmca.tex  ch_index.aux  ch_index.tex  ch_ref.aux  ch_ref.tex  cl2emono.sty  cmmp.sty  conclu.tex  cover.aux  cover.tex  coverpage.pages  cropmark.sty  dimensions.sty  doc_iSAP.aux  doc_iSAP.bbl  doc_iSAP.blg  doc_iSAP.idx  doc_iSAP.ilg  doc_iSAP.ind  doc_iSAP.loa  doc_iSAP.maf  doc_iSAP.pdfsync  doc_iSAP.tex  doc_iSAP.toc  fluctu.aux  fluctu.tex  foreword.aux  foreword.tex  foreword.texshop  foreword_mrsv1.tex  foreword_msvst.tex  (+52 more)
src/doc/doc_mra/: aperture.bib  astro.bib  astrowave.bib  biblio.tex  candes.bib  cf_ana.bib  cluster.bib  cover.aux  cover.tex  curvelet.bib  doc_mra.aux  doc_mra.bbl  doc_mra.blg  doc_mra.dvi  doc_mra.idx  doc_mra.ilg  doc_mra.ind  doc_mra.tex  doc_mra.toc  fionn.bib  gauss.bib  global.bib  i1.idx  i2.idx  i3.idx  i4.idx  intro_conf.tex  iso.bib  ls.tex  mc.bib  part1.aux  part1.tex  part2.aux  part2.tex  part3.aux  part3.tex  part4.aux  part4.tex  partbib.aux  partbib.tex  (+8 more)
src/idl/: Makefile  compile_healpixfile.pro  isap.pro
src/idl/HELP/: Astron.help  COSMO-CMB.help  COSMO-ISW.help  DarthFader.help  MRS-MSVST.help  MRS.help  MRSP.help  MSVST.help  Sparse1D.help  Sparse2D.help  Tools.help
src/idl/MISC/: ,idl_default_previewer.pro  bfgsa_fit.pro  conjgrad_fit.pro  coord_conversion.pro  dat2fits.pro  data2stats_1d_f.pro  data2stats_1d_w.pro  data2stats_2d_f.pro  data2stats_2d_w.pro  data2stats_sph_f.pro  data2stats_sph_w.pro  em_fit.pro  generate_header.pro  kron.pro  makefilter.pro  mrs_mask.pro  normalisation_1d.pro  normalisation_2d.pro  normalisation_sph.pro  qn_fit.pro  qp_fit.pro  read_ascii.pro  repmat.pro  repmat3d.pro  rescale_ap.pro  rescale_param.pro  separfilter_1d_f.pro  separfilter_1d_w.pro  separfilter_2d_f.pro  separfilter_2d_w.pro  separfilter_sph_f.pro  separfilter_sph_w.pro  sph_centers.pro  sph_data2gnom.pro  sph_divide.pro  sph_gnomview.pro  sph_lb2xy.pro  sph_loaddata_healpix.pro  tvsp.pro  type1totype2.pro
src/idl/MRS/: mrs_GetWTLocalVariance.pro  mrs_alias.pro  mrs_allstat.pro  mrs_alm2spec.pro  mrs_alm_convol.pro  mrs_alm_inpainting.pro  mrs_almrec.pro  mrs_almrot.pro  mrs_almtrans.pro  mrs_atwt.pro  mrs_betatrans.pro  mrs_cbfilter.pro  mrs_convol.pro  mrs_crosspowspec.pro  mrs_curfilter.pro  mrs_curget.pro  mrs_curput.pro  mrs_currec.pro  mrs_curstat.pro  mrs_curtrans.pro  mrs_dctrec.pro  mrs_dcttrans.pro  mrs_deconv_powspec.pro  mrs_dilation.pro  mrs_erosion.pro  mrs_fastica.pro  mrs_getbeam.pro  mrs_glesp.pro  mrs_init.pro  mrs_invsplit.pro  mrs_itwiener.pro  mrs_jade.pro  mrs_lat_index.pro  mrs_master_powspec.pro  mrs_matmask.pro  mrs_mca.pro  mrs_median.pro  mrs_mmt.pro  mrs_needlet_filters.pro  mrs_owtget.pro  (+44 more)
src/idl/MRSP/: mr_modphase_dwt_rec.pro  mr_modphase_dwt_trans.pro  mr_modphase_uwt_rec.pro  mr_modphase_uwt_trans.pro  mrs_modphase_dwt_rec.pro  mrs_modphase_dwt_trans.pro  mrs_modphase_uwt_rec.pro  mrs_modphase_uwt_trans.pro  mrsp_addnoise.pro  mrsp_alm2spec.pro  mrsp_almrec.pro  mrsp_almtrans.pro  mrsp_init.pro  mrsp_matmask_deconv.pro  mrsp_read_cl.pro  mrsp_rec.pro  mrsp_resize.pro  mrsp_spec.pro  mrsp_testpol.pro  mrsp_threshold.pro  mrsp_trans.pro  mrsp_tvf.pro  mrsp_wtfilter.pro  mrsp_wtget.pro  mrsp_wtput.pro  mrsp_wtrec.pro  mrsp_wttrans.pro
src/idl/MRS_MSVST/: README.txt  mrs_msvsts_curv_denoising.pro  mrs_msvsts_curv_denoising_ancien.pro  mrs_msvsts_curv_transform.pro  mrs_msvsts_iuwt_hypothesis_testing.pro  mrs_msvsts_iuwt_hypothesis_testing_convol.pro  mrs_msvsts_iuwt_param_computing.pro  mrs_msvsts_iuwt_transform.pro  mrs_msvsts_multichannel_deconvolution.pro  mrs_msvsts_multichannel_denoising.pro  mrs_msvsts_test.pro  ms_vst_reconstruction.pro  vv.pro
src/idl/STAT/: MomentConst.pro  at1dwt.pro  at2dwt.pro  bwt01_direct.pro  bwt01_inverse.pro  bwt01_lift.pro  bwt01_test.pro  check_linear_operator_norm.pro  dct.pro  fastica.pro  get_stat.pro  gmca1d.pro  gmca2d.pro  invlinogram.pro  invpwt1d.pro  invrid2d.pro  jade.pro  pwt1d.pro  rid2d.pro  survival.pro
src/idl/TEST/: ,planck_mask_mca.pro  alm_bianch.fits  alm_cmb.fits  anomalies_lowquad.pro  cmb_anomalies.pro  dico.pro  exact_data2gnom.pro  fig_cmb_bianchi  mrs_cftoe2latspec.pro  mrs_dct_inpainting.pro  mrs_hc_wtima.pro  mrs_iso_inpainting.pro  mrs_isotropy.pro  mrs_iter_wiener.pro  mrs_latpowspec.pro  mrs_mr_filter.pro  mrs_plot_latpowspec.pro  mrs_pswtfil.pro  mrs_sparse_master.pro  mrs_wt_multichannel.pro  old_ano.pro  pb_old_dico.pro  power_to_correl.pro  simu_sky.fits  test_anomalies.pro
src/idl/msvst/: msvst_2d1d.pro  msvst_iwt.pro  msvst_uwt2d.pro
src/idl/sparse1d/: istar1d.pro  mr1d_filter.pro  mr1d_recons.pro  mr1d_trans.pro  star1d.pro
src/idl/sparse2d/: istar2d.pro  mr_deconv.pro  mr_filter.pro  mr_info.pro  mr_read.pro  mr_recons.pro  mr_transform.pro  star2d.pro  star2d_adjoint.pro  star2d_deconv.pro  star2d_deconv.pro.mine  (+3 more)
src/modules/: BuildSparse2D.cmake  functions.cmake
(+1334 files in other folders)
