[build-system]
requires = ["py-build-cmake"]
build-backend = "py_build_cmake.build"

[project]
name = "pycs"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { "name" = "The CosmoStat Lab" },
]
maintainers = [
    { "name" = "Samuel Farrens", "email" = "samuel.farrens@cea.fr" },
    { "name" = "Jean-Luc Starck", "email" = "jean-luc.starck@cea.fr" },
]
dynamic = ["version", "description"]
license = { "file" = "LICENSE" }
keywords = ["CosmoStat", "astrostatistics", "cosmology", "signal processing"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "astropy>=4.0",
    "cython",
    "healpy>=1.14",
    "lenspack>=1.0.0",
    "matplotlib>=3.3",
    "modopt>=1.4.4",
    "numpy>=1.19",
    "scipy>=1.5",
    "seaborn>=0.10"
]

[project.optional-dependencies]
lint = [
    "black",
]
release = [
    "build",
    "twine",
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-pydocstyle",
]
dev = ["pycs[lint,release,test]"]

[project.urls]
Source = "https://github.com/CosmoStat/cosmostat"
Documentation = "https://github.com/CosmoStat/cosmostat"
Tracker = "https://github.com/CosmoStat/cosmostat/issues"

[tool.black]
line-length = 88

[tool.py-build-cmake.module]
name = "pycs"

[tool.py-build-cmake.sdist]
include = ["src/cxx/*"]

[tool.py-build-cmake.cmake]
source_path = "src/cxx"
build_args = ["-j 8"]
find_python = true

[tool.pydocstyle]
convention = "numpy"
# Only run docstyle tests on module init files until documentation cleaned up
match = "__init__.py"

[tool.pytest.ini_options]
addopts = "--verbose --pydocstyle --cov=pycs"
testpaths = ["pycs"]

